# Lighthouse_v2

./: .gitignore  Makefile
.github/workflows/: cd.yml  ci.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/src/lighthouse_api/: main.py
backend/src/lighthouse_api/api/: deps.py  router.py
backend/src/lighthouse_api/api/v1/routes/: audit.py  auth.py  datasets.py  folders.py  health.py  monitoring.py  pipelines.py  schemas.py  transformations.py
backend/src/lighthouse_api/core/: config.py  database.py  logging.py  security.py
backend/src/lighthouse_api/middleware/: audit_logger.py  auth.py  request_id.py  security_headers.py
backend/src/lighthouse_api/models/: __init__.py  audit.py  base.py  dataset.py  folder.py  monitoring.py  pipeline.py  schema.py  transformation.py
backend/src/lighthouse_api/schemas/: dataset.py  folder.py  health.py  monitoring.py  pipeline.py  schema.py  transformation.py
backend/src/lighthouse_api/seed/: seed_datasets.py
backend/src/lighthouse_api/services/: executor.py
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  datasets.ts  folders.ts  monitoring.ts  pipelines.ts  schemas.ts
frontend/src/pages/: DatasetDetailPage.tsx  DatasetsPage.tsx  FolderDetailPage.tsx  LoginPage.tsx  MonitoringPage.tsx  (+4 more)
k8s/: deployment.yaml  frontend-deployment.yaml  frontend-service.yaml  ingress.yaml  namespace.yaml  networkpolicy-acme.yaml  networkpolicy.yaml  poddisruptionbudget.yaml  service.yaml  serviceaccount.yaml
(+8 files in other folders)
